metabase/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
  labels:
    app: metabase
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: metabase
