metabase/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metabase-ingress
  namespace: metabase
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`opendata.cngei.it`)
      services:
        - kind: Service
          name: metabase
          port: 3000
  tls:
    secretName: metabase-tls
